# llm_template

./: README.md  pyproject.toml
dashboards/: simple_chat.py
llm/: dumbest_llm.py
tests/: test_dumbest_llm.py  test_import.py
