[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Jeremy Mann <jmann227@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
openai = "^0.27.9"
streamlit = "^1.26.0"
pandas = "^2.0.3"
langchain = "^0.0.273"
chromadb = "^0.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
